fixed overlapping button bug

--- a/client/src/components/AddPetModal/style.css
+++ b/client/src/components/AddPetModal/style.css
@@ -41,10 +41,6 @@
 /* Add pet Modal */
 /* Modal content */
 
-.add-pet-modal > div.modal-content{
-    height: 600px;
-}
-
 /* upload img btn */
 #modal1 > div.modal-content > div.input-field.col.file-field > div.btn{
     background-color: #fd267d; 
